--- a/home.html
+++ b/home.html
@@ -1,11 +1,20 @@
 <html>
+	
 <head>
-	<title>INFT1206 - Home</title>
+	<!-- Name: Innocent Amini
+	Date: 08 September 2025
+	File: index.html
+	Desc: This is the home page for my INNO-CENT3 website -->
+	<title>	INNO-CENT3 Web - Home</title>
 </head>
-<body>
-<h1>INFT1206 - Web Dev Fun - Home Page</h1>
-<p>This is mt kjd;fl jfas;lfdj fjdsa f lkjdlkfhalkjflkajf;lkj</p>
 
-<p>This is another paragraph.</p>
+<body>
+<h1>INNO-CENT3 Web - Web Dev is Fun😂👌😊🍕🍿👨🏾‍💻- Home Page🖥️ </h1>
+<p>This is my first website, Please don't histate to reach me out if you see any error<br><br>
+	My Github account Repository is inno-cent-3.github.io
+</p>
+<p>To be Continued................ 😉😍🙏<br><br>
+😊😊😊😊😊😊😊😊😊😊😊❤️😉😂🙏<br></p>
 </body>
+
 </html>
