--- a/Lab1/part1/index.html
+++ b/Lab1/part1/index.html
@@ -1,9 +1,15 @@
 <html>
-    <head>
-        <title>INNO-CENT3 Web- Home</title>
-    </head>
+<head>
+    <!-- 
+    Name: Innocent Amini
+	Date: 08 September 2025
+	File: index.html
+	Desc: This is Lab 1 part marking up a letter for my INNO-CENT3 website
+    -->
+<title>INNO-CENT3 Web- Home</title>
+</head>
 
-    <body>
+<body>
     Dr. Eleanor Gaye
 Awesome Science faculty
 University of Awesome
@@ -92,6 +98,6 @@ Dr Eleanor Gaye
 
 University of Awesome motto: Be awesome to each other. --
 The memoirs of Bill S Preston, Esq.
-    </body>
+</body>
 
 </html>
