--- a/Lab1/part1/index.html
+++ b/Lab1/part1/index.html
@@ -7,6 +7,21 @@
 	Desc: This is Lab 1 part marking up a letter for my INNO-CENT3 website
     -->
 <title>INNO-CENT3 Web- Home</title>
+
+
+<style>
+body {
+    font: 1.2em / 1.5 system-ui;}
+
+.sender-column {
+    text-align: right;}
+
+h1 {
+    font-size: 1.5em;}
+
+h2 {
+    font-size: 1.3em;}
+</style>
 </head>
 
 <body>
