--- a/Lab1/part1/index.html
+++ b/Lab1/part1/index.html
@@ -25,35 +25,39 @@ h2 {
 </head>
 
 <body>
-    Dr. Eleanor Gaye
-Awesome Science faculty
-University of Awesome
-Bobtown, CA 99999,
-USA
-Tel: 123-456-7890
-Email: no_reply@example.com
-
+<address class="sender-column">
+<strong>Eleanor Gaye</strong><br>
+Awesome Science faculty<br>
+University of Awesome<br>
+Bobtown, CA 99999,<br>
+USA<br>
+Tel: 123-456-7890<br>
+Email: no_reply@example.com<br>
+</address>
+<p class="sender-column">
 20 January 2016
+</p>
+<address>
+<strong> Eileen Dover </strong><br>
+4321 Cliff Top Edge<br>
+Dover, CT9 XXX<br>
+UK<br>
+</address>
 
-Miss Eileen Dover
-4321 Cliff Top Edge
-Dover, CT9 XXX
-UK
+<h1>Re: Eileen Dover university application</h1>
 
-Re: Eileen Dover university application
+<p>Dear Eileen,</p>
 
-Dear Eileen,
-
-Thank you for your recent application to join us at the University of
+<p>Thank you for your recent application to join us at the University of
 Awesome's science faculty to study as part of your
 PhD (Doctor of Philosophy) next year. I will answer your
-questions one by one, in the following sections.
+questions one by one, in the following sections.</p>
 
-Starting dates
+<h2>Starting dates</h2>
 
-We are happy to accommodate you starting your study with us at any time,
+<p>We are happy to accommodate you starting your study with us at any time,
 however it would suit us better if you could start at the beginning of a
-semester; the start dates for each one are as follows:
+semester; the start dates for each one are as follows:</p>
 
 First semester: 9 September 2016
 Second semester: 15 January 2017
