Update home.html- First link
Started adding some links

--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@
 </p>
 <p>To be Continued................ 😉😍🙏<br><br>
 😊😊😊😊😊😊😊😊😊😊😊❤️😉😂🙏<br></p>
+<p>Lab 1 Part 1: <a href="https://inno-cent-3.github.io/Lab1/part1/">Letter markup</a></p>
+<p>Lab 1 Part 2: <a href="./assign1/part2/index.html">Birdwatching Home Page</a></p>
 </body>
 
 </html>
