--- a/LABS/lab1/part1/index.html
+++ b/LABS/lab1/part1/index.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+
+<!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 10 September 2025
+	Desc: Lab 1 part 1 for INFT1206 marking up a cover letter.
+-->
 <title>INFT1206 - Lab 1 Part 1</title>
 </head>
 <body>
