--- a/LABS/lab1/part2/index.html
+++ b/LABS/lab1/part2/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 10 September 2025
+	Desc: Lab 1 part 2 for INFT1206 marking up the homepage for the bird watching website.
+-->
     <title>Birdwatching</title>
     <link
     href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700"
@@ -26,7 +32,7 @@
     </p>
 
     <h2>Favorite photos</h2>
-    
+
     <!-- Link images here. -->
 
     <p>
