--- a/LABS/lab1/part2/index.html
+++ b/LABS/lab1/part2/index.html
@@ -145,8 +145,21 @@ footer {
 </head>
 
 <body>
-    <h1>Birdwatching</h1>
-    Home Get started Photos Gear Forum
+    <h1>
+    Birdwatching
+    <img
+        src="https://mdn.github.io/shared-assets/images/examples/learn/birds/dove.png"
+        alt="a simple dove logo" />
+    </h1>
+
+    
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Get started</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Gear</a></li>
+        <li><a href="#">Forum</a></li>
+    </ul>
     
     <h2>Welcome</h2>
     <p>
@@ -163,7 +176,30 @@ footer {
 
     <h2>Favorite photos</h2>
 
-    <!-- Link images here. -->
+    <a
+    href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-1.jpg">
+    <img
+    src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-1_th.jpg"
+    alt="Small black bird, black claws, long black slender beak" />
+</a>
+<a
+    href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-2.jpg">
+    <img
+    src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-2_th.jpg"
+    alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress" />
+</a>
+<a
+    href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-3.jpg">
+    <img
+    src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-3_th.jpg"
+    alt="Top half of a large bird with white plumage, very long curved narrow light colored break" />
+</a>
+<a
+    href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-4.jpg">
+    <img
+    src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-4_th.jpg"
+    alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak" />
+</a>
 
     <p>
     This fake website example is CC0 — any part of this code may be reused
