--- a/LABS/lab1/part2/index.html
+++ b/LABS/lab1/part2/index.html
@@ -145,6 +145,7 @@ footer {
 </head>
 
 <body>
+<header>
     <h1>
     Birdwatching
     <img
@@ -152,7 +153,7 @@ footer {
         alt="a simple dove logo" />
     </h1>
 
-    
+    <nav>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Get started</a></li>
@@ -160,8 +161,12 @@ footer {
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
     </ul>
-    
-    <h2>Welcome</h2>
+    </nav>
+</header>  
+
+<main>
+<article>
+<h2>Welcome</h2>
     <p>
     Welcome to our fake birdwatching site. If this were a real site, it
     would be the ideal place to come to learn more about birdwatching,
@@ -173,8 +178,10 @@ footer {
     So don't waste time! Get what you need, then turn off that computer and
     get out into the great outdoors!
     </p>
+</article>
 
-    <h2>Favorite photos</h2>
+<aside>
+<h2>Favorite photos</h2>
 
     <a
     href="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-1.jpg">
@@ -200,7 +207,10 @@ footer {
     src="https://mdn.github.io/shared-assets/images/examples/learn/birds/favorite-bird-4_th.jpg"
     alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak" />
 </a>
+</aside>
+</main>
 
+<footer>
     <p>
     This fake website example is CC0 — any part of this code may be reused
     in any way you wish. Original example written by Chris Mills, 2016.
@@ -210,5 +220,7 @@ footer {
     <a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a>
     by Lorc.
     </p>
+</footer>
+
 </body>
 </html>
