--- a/LABS/lab1/index.html
+++ b/LABS/lab1/index.html
@@ -1,6 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Inno-centt-3_INFT1206 - Home Page</title>
+    <meta charset="utf-8" />
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 14 September 2025
+	Desc: This home page contains links to main home page for INFT1206 Lab1 part 1 and 2.
+-->
+    <title>INFT1206 - Lab 1</title>
 </head>
 <body>
 <p>Lab 1 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab1/part1/index.html">Letter markup</a></p>
