--- a/LABS/lab1/index.html
+++ b/LABS/lab1/index.html
@@ -9,9 +9,32 @@
 	Desc: This home page contains links to main home page for INFT1206 Lab1 part 1 and 2.
 -->
     <title>INFT1206 - Lab 1</title>
+	<style>
+	body {
+		font-family: Arial, sans-serif;
+		background-color: lightgrey;
+		margin: 20px;
+	}
+	title {
+		font-size: 2rem;
+	}
+	h1 {
+		color: #333;
+		font-size: 2rem;
+		text-align: center;
+		text-shadow: 2px 2px 10px black;
+    }
+	a {
+		color: #0066cc;
+		text-decoration: none;
+	}
+	</style>
 </head>
 <body>
+
+<br><h1>INFT1206 - Lab 1</h1><br>
 <p>Lab 1 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab1/part1/index.html">Letter markup</a></p>
 <p>Lab 1 Part 2: <a href="https://inno-cent-3.github.io/LABS/lab1/part2/index.html">Birdwatching Home Page</a></p>
+
 </body>
 </html>
