--- a/LABS/index.html
+++ b/LABS/index.html
@@ -1,11 +1,20 @@
-<html>	
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="utf-8" />
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 14 September 2025
+	Desc: This home page contains links to main home page for INFT1206 Labs.
+-->
 	<title>Innocent's INFT1206 - Home page</title>
 </head>
 <body>
 
 <h1>WELCOME TO INNOCENT'S INFT1206 LABS WEBPAGE</h1>
 Please click on the Following links to Explorer the labs!</h1><br>
+<p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏼</a></p>
 
 </body>
 </html>
