--- a/LABS/index.html
+++ b/LABS/index.html
@@ -9,13 +9,33 @@
 	Desc: This home page contains links to main home page for INFT1206 Labs.
 -->
 	<title>Innocent's INFT1206 - Home page</title>
+    <style>
+	body {
+		font-family: Arial, sans-serif;
+		background-color: lightblue;
+		margin: 20px;
+	}
+	title {
+		font-size: 2rem;
+	}
+	h1 {
+        text-transform: uppercase;
+		color: #333;
+		font-size: 2rem;
+		text-align: center;
+		text-shadow: 2px 2px 10px black;
+    }
+	a {
+		color: #0066cc;
+		text-decoration: none;
+	}
+	</style>
 </head>
 <body>
-
-<h1>WELCOME TO INNOCENT'S INFT1206 LABS WEBPAGE</h1>
+<h1>Web Development is Fun😊👌</h1>
+<h1>WELCOME TO INNOCENT'S INFT1206 LABS WEBPAGE</h1><br><br>
 Please click on the Following links to Explorer the labs!</h1><br>
-<p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏼</a></p>
+<p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏾</a></p>
 
 </body>
 </html>
-
