--- a/LABS/index.html
+++ b/LABS/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <!--
 	Name: Innocent Amini
 	File: index.html
@@ -34,7 +34,7 @@
 <body>
 <h1>Web Development is Fun😊👌</h1>
 <h1>WELCOME TO INNOCENT'S INFT1206 LABS WEBPAGE</h1><br><br>
-Please click on the Following links to Explorer the labs!</h1><br>
+Please click on the Following links to Explorer the labs!<br>
 <p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏾</a></p>
 
 </body>
