--- a/LABS/lab2/splash-page-challenge/part1/index.html
+++ b/LABS/lab2/splash-page-challenge/part1/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 22 September 2025
+	Desc: This is the home page for INFT1206 Lab2 splash-page-challenge part 1.
+-->
 <title>Creepy crawlies!</title>
 <link href="style.css" rel="stylesheet" />
 </head>
