--- a/LABS/lab2/splash-page-challenge/part1/index.html
+++ b/LABS/lab2/splash-page-challenge/part1/index.html
@@ -9,7 +9,7 @@
 	Desc: This is the home page for INFT1206 Lab2 splash-page-challenge part 1.
 -->
 <title>Creepy crawlies!</title>
-<link href="style.css" rel="stylesheet" />
+<link href="./styles/style.css" rel="stylesheet" />
 </head>
 <body>
 <header>
