--- a/LABS/lab2/splash-page-challenge/part1/index.html
+++ b/LABS/lab2/splash-page-challenge/part1/index.html
@@ -11,6 +11,7 @@
 <title>Creepy crawlies!</title>
 <link href="./styles/style.css" rel="stylesheet" />
 </head>
+
 <body>
 <header>
     <nav>
@@ -23,8 +24,22 @@
         <li><a href="#spiders">Spiders</a></li>
     </ul>
     </nav>
+
     <section>
     <h1>Creepy-crawlies splash page!</h1>
+
+<video
+    src="https://mdn.github.io/shared-assets/videos/learn/bug_video_640.mp4"
+    type="video/mp4"
+    autoplay
+    loop
+    muted
+    preload="auto">
+<!-- Alternative Method-->
+<!--<video autoplay="true" controls="false" loop="true" muted="true">
+    <source src="./videos/bug_video_640.mp4" type="video/mp4" />
+    Your browser does not support the video tag.-->
+</video>
 
     <p>
         In casual language, people use “bugs” to mean all sorts of small
@@ -35,6 +50,7 @@
     </p>
     </section>
 </header>
+
 <main>
     <section id="beetles">
     <h2>Beetles (Coleoptera)</h2>
@@ -230,5 +246,6 @@
     </p>
     </section>
 </main>
+
 </body>
 </html>
