--- a/LABS/lab2/splash-page-challenge/part1/index.html
+++ b/LABS/lab2/splash-page-challenge/part1/index.html
@@ -55,6 +55,14 @@
     <section id="beetles">
     <h2>Beetles (Coleoptera)</h2>
 
+<figure>
+<img
+    src="./images/beetle.jpg"
+    alt="Bees,Wasps,Ants (Hymenoptera) image"
+    width="250"
+    height="180"/>
+<figcaption> Black Beetle</figcaption>
+</figure>
     <p>
         Beetles make up the largest order of insects, with more than
         350,000 known species. They are recognized by their hardened
@@ -83,6 +91,15 @@
     </section>
     <section id="true_bugs">
     <h2>True Bugs (Hemiptera)</h2>
+
+<figure>
+<img 
+        src ="./images/true_bug.jpg" 
+        alt="True bug image"
+    width="250"
+    height="180"/>
+<figcaption> True Bug</figcaption>
+</figure>
 
     <p>
         True bugs include a wide range of insects such as stink bugs,
@@ -124,6 +141,15 @@
     <section id="butterflies_moths">
     <h2>Butterflies & Moths (Lepidoptera)</h2>
 
+<figure>
+    <img 
+        src ="./images/butterfly.jpg"
+        alt="butterflies & Moths"
+    width="250"
+    height="180"/>
+<figcaption> A beautiful butterfly</figcaption>
+</figure>
+
     <p>
         Butterflies and moths are some of the most recognizable insects
         thanks to their large, often colorful wings covered in tiny scales.
@@ -153,6 +179,14 @@
     </section>
     <section id="flies_mosquitos">
     <h2>Flies & Mosquitoes (Diptera)</h2>
+<figure>
+    <img 
+        src ="./images/mosquito.jpg" 
+        alt="Flies image"
+    width="250"
+    height="180"/>
+<figcaption> Image of a fly</figcaption>
+</figure>
 
     <p>
         Flies and mosquitoes belong to the order Diptera, meaning “two
@@ -190,6 +224,15 @@
     <section id="bees_wasps_ants">
     <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
 
+    <figure>
+    <img 
+        src ="./images/bee.jpg" 
+        alt="Bees image"
+    width="250"
+    height="180"/>
+<figcaption> Image of a bee</figcaption>
+</figure>
+
     <p>
         Bees, wasps, and ants are a diverse group known for their complex
         behaviors and social structures. Many species live in colonies with
@@ -219,6 +262,15 @@
     </section>
     <section id="spiders">
     <h2>Spiders (Araneae)</h2>
+
+    <figure>
+    <img 
+        src ="./images/spider.jpg" 
+        alt="Spiders image"
+    width="250"
+    height="180"/>
+<figcaption> Image of a Spiders</figcaption>
+</figure>
 
     <p>
         Spiders are arachnids, not insects, and are easily distinguished by
