--- a/LABS/lab2/splash-page-challenge/index.html
+++ b/LABS/lab2/splash-page-challenge/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 24 September 2025
+	Desc: This home page contains links to main home page for INFT1206 Lab2 part 1 and 2.
+-->
     <title>INFT1206 - Lab 2</title>
 	<style>
 	body {
@@ -28,8 +33,8 @@
 <body>
 
 <br><h1>INFT1206 - Lab 2</h1><br>
-<p>Lab 2 Part 1: 
-<p>Lab 2 Part 2:
+<p>Lab 2 Part 1: </p>
+<p>Lab 2 Part 2:</p>
 
 </body>
 </html>
