--- a/LABS/lab2/splash-page-challenge/index.html
+++ b/LABS/lab2/splash-page-challenge/index.html
@@ -33,8 +33,8 @@
 <body>
 
 <br><h1>INFT1206 - Lab 2</h1><br>
-<p>Lab 2 Part 1: </p>
-<p>Lab 2 Part 2:</p>
+<p>Lab 2 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab2/splash-page-challenge/part1/index.html">Creepy-crawlies</a></p>
+<p>Lab 2 Part 2: </p>
 
 </body>
 </html>
