--- a/LABS/index.html
+++ b/LABS/index.html
@@ -36,6 +36,7 @@
 <h1>WELCOME TO INNOCENT'S INFT1206 LABS WEBPAGE</h1><br><br>
 Please click on the Following links to Explorer the labs!<br>
 <p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏾</a></p>
+<p>Lab 2: <a href="https://inno-cent-3.github.io/LABS/lab2/index.html">Click here!👈🏾</a></p>
 
 </body>
 </html>
