--- a/LABS/lab2/index.html
+++ b/LABS/lab2/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <br><h1>INFT1206 - Lab 2</h1><br>
-<p>Lab 1 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab2/index.html">Creepy-crawlies</a></p>
+<p>Lab 1 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab2/part1/index.html">Creepy-crawlies</a></p>
 <p>Lab 1 Part 2: </p>
 
 </body>
