--- a/LABS/lab2/part2/index.html
+++ b/LABS/lab2/part2/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+        <meta charset="utf-8" />
+    <!--
+	Name: Innocent Amini
+	File: index.html
+	Date: 02 October 2025
+	Desc: This is the home page code for INFT1206 Lab2 part 2(Planets data table)
+    -->
     <title>Planets data</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
+</head>
+<body>
     <h1>Planets data</h1>
 
 
-  </body>
+</body>
 </html>
