--- a/LABS/lab2/index.html
+++ b/LABS/lab2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <!--
 	Name: Innocent Amini
 	File: index.html
@@ -34,7 +34,7 @@
 
 <br><h1>INFT1206 - Lab 2</h1><br>
 <p>Lab 2 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab2/part1/index.html">Creepy-crawlies</a></p>
-<p>Lab 2 Part 2: </p>
+<p>Lab 2 Part 2: <a href="https://inno-cent-3.github.io/LABS/lab2/part2/index.html">Planets Data</a></p>
 
 </body>
 </html>
