--- a/LABS/lab2/part1/index.html
+++ b/LABS/lab2/part1/index.html
@@ -53,7 +53,7 @@
 
 <main>
     <section id="beetles">
-    <h2>Beetles (Coleoptera)</h2>
+    <h2>🪲Beetles (Coleoptera)</h2>
 
 <figure>
 <img
@@ -90,7 +90,7 @@
     </p>
     </section>
     <section id="true_bugs">
-    <h2>True Bugs (Hemiptera)</h2>
+    <h2>🪳True Bugs (Hemiptera)</h2>
 
 <figure>
 <img 
@@ -139,7 +139,7 @@
     </p>
     </section>
     <section id="butterflies_moths">
-    <h2>Butterflies & Moths (Lepidoptera)</h2>
+    <h2>🦋Butterflies & Moths (Lepidoptera)</h2>
 
 <figure>
     <img 
@@ -178,7 +178,7 @@
     </p>
     </section>
     <section id="flies_mosquitos">
-    <h2>Flies & Mosquitoes (Diptera)</h2>
+    <h2>🦟Flies & Mosquitoes (Diptera)</h2>
 <figure>
     <img 
         src ="./images/mosquito.jpg" 
@@ -222,7 +222,7 @@
     </p>
     </section>
     <section id="bees_wasps_ants">
-    <h2>Bees, Wasps, Ants (Hymenoptera)</h2>
+    <h2>🐝Bees, Wasps, Ants (Hymenoptera)</h2>
 
     <figure>
     <img 
@@ -261,7 +261,7 @@
     </p>
     </section>
     <section id="spiders">
-    <h2>Spiders (Araneae)</h2>
+    <h2>🕷️Spiders (Araneae)</h2>
 
     <figure>
     <img 
