--- a/LABS/lab3/part1/index.html
+++ b/LABS/lab3/part1/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<title>	INNO-CENT3 Web - Home</title>
-</head>
+	<!-- Name: Innocent Amini
+	Date: 08 September 2025
+	File: index.html
+	Desc: This is the bio page for lab 3 part 1 
+	-->
 
+<title>	Lab 3 Part 1</title>
+<link rel="stylesheet" type="text/css" href="./css/styles.css" >
+</head>
 <body>
 <h1>Jane Doe</h1>
 <div class="job-title">Web Developer</div>
