--- a/LABS/lab3/part2/layout-challenge/index.html
+++ b/LABS/lab3/part2/layout-challenge/index.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<!-- Name: Innocent Amini
+	Date: 08 September 2025
+	File: index.html
+	Desc: This is the Layout page for lab 3 part 2.
+	-->
+
 <title>Layout Task</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
