--- a/LABS/lab3/part2/typesetting-challenge/index.html
+++ b/LABS/lab3/part2/typesetting-challenge/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <!-- Name: Innocent Amini
+    Date: 13 September 2025
+    File: index.html
+    Desc: This is St Huxley's Community College page for lab 3 part 2.
+    -->
     <title>St Huxley's Community College</title>
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
