--- a/LABS/lab3/part1/index.html
+++ b/LABS/lab3/part1/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="./css/styles.css" >
 </head>
 <body>
-<h1>Jane Doe</h1>
+<h1>Innocent Amini</h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
@@ -28,7 +28,7 @@
 
 <h2>Contact information</h2>
 <ul>
-  <li>Email: <a href="mailto:jane@example.com">jane@example.com</a></li>
+  <li>Email: <a href="mailto:innocent@example.com">innocent@example.com</a></li>
   <li>Web: <a href="http://example.com">http://example.com</a></li>
   <li>Tel: <a href="tel:12345678">123 45678</a></li>
 </ul>
