--- a/LABS/lab3/index.html
+++ b/LABS/lab3/index.html
@@ -33,6 +33,9 @@
 <body>
 
 <br><h1>INFT1206 - Lab 3</h1><br>
+<p>Lab 3 Part 1: <a href="https://inno-cent-3.github.io/LABS/lab3/part1/index.html">Biography page</a></p>
+<p>Lab 3 Part 2: <a href="https://inno-cent-3.github.io/LABS/lab3/part2/typesetting-challenge/index.html">typesetting</a></p>
+<p>Lab 3 Part 3: <a href="https://inno-cent-3.github.io/LABS/lab3/part3/layout-challenge/index.html">Layout Task</a></p>
 
 </body>
 </html>
