--- a/LABS/index.html
+++ b/LABS/index.html
@@ -37,6 +37,7 @@
 Please click on the Following links to Explorer the labs!<br>
 <p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏾</a></p>
 <p>Lab 2: <a href="https://inno-cent-3.github.io/LABS/lab2/index.html">Click here!👈🏾</a></p>
+<p>Lab 3: <a href="https://inno-cent-3.github.io/LABS/lab3/index.html">Click here!👈🏾</a></p>
 
 </body>
 </html>
