Added comments to Lab 4 Part 1

--- a/LABS/lab4/part1/index.html
+++ b/LABS/lab4/part1/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	
+	<!-- Name: Innocent Amini
+	Date: 19 November 2025
+	File: index.html
+	Desc: This is the silly story generator for lab 4 part 1 
+	-->
 
 <title>	Lab 4 - Part 1</title>
 <link rel="stylesheet" type="text/css" href="./css/styles.css" >
