--- a/LABS/lab4/part1/index.html
+++ b/LABS/lab4/part1/index.html
@@ -27,5 +27,8 @@
   <button class="generate">Generate random story</button>
 </div>
 <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
-<p class="story"></p></body>
+<p class="story"></p>
+<script src="./js/main.js"></script>
+
+</body>
 </html>
