Added comments to Lab 4 Part 2

--- a/LABS/lab4/part2/html/index.html
+++ b/LABS/lab4/part2/html/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	
-
+	<!-- Name: Innocent Amini
+	Date: 20 November 2025
+	File: index.html
+	Desc: This is the image gallery html code for lab 4 part 2 
+	-->
 <title>	Lab 4 - Part 2</title>
 <link rel="stylesheet" type="text/css" href="../css/styles.css" >
 </head>
