Added comments to Lab 4 Part 3

--- a/LABS/lab4/part3/html/index.html
+++ b/LABS/lab4/part3/html/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <!-- Name: Innocent Amini
+	Date: 23 November 2025
+	File: index.html
+	Desc: This is the bouncing ball html code for lab 4 part 3.
+	-->
     <title>Bouncing balls</title>
     <link rel="stylesheet" href="style.css">
   </head>
