Updated the balls data

--- a/LABS/lab4/part3/html/index.html
+++ b/LABS/lab4/part3/html/index.html
@@ -9,13 +9,13 @@
 	Desc: This is the bouncing ball html code for lab 4 part 3.
 	-->
     <title>Bouncing balls</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
     <h1>bouncing balls</h1>
     <canvas></canvas>
 
-    <script src="main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
