--- a/LABS/lab4/part4/html/index.html
+++ b/LABS/lab4/part4/html/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-
+    <!-- Name: Innocent Amini
+	Date: 25 November 2025
+	File: index.html
+	Desc: This is the bouncing ball html code for lab 4 part 4.
+	-->
     <title>Bouncing balls with the EvilCircle</title>
     <link rel="stylesheet" href="../css/style.css">
   </head>
