--- a/LABS/lab4/part4/html/index.html
+++ b/LABS/lab4/part4/html/index.html
@@ -14,7 +14,8 @@
 
   <body>
     <h1>bouncing balls</h1>
-    <canvas></canvas>
+    <p>Ball count: </p>
+    <canvas>width = "800" height = "600"</canvas>
 
     <script src="../js/main.js"></script>
   </body>
