--- a/LABS/lab4/part4/html/index.html
+++ b/LABS/lab4/part4/html/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>bouncing balls</h1>
     <p>Ball count: </p>
-    <canvas>width = "800" height = "600"</canvas>
+    <canvas></canvas>
 
     <script src="../js/main.js"></script>
   </body>
