Added comments to Lab 4 Part 5

--- a/LABS/lab4/part5/forms-challenge/html/index.html
+++ b/LABS/lab4/part5/forms-challenge/html/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- Name: Innocent Amini
+	Date: 25 November 2025
+	File: index.html
+	Desc: This is the Forms-callenge code for lab 4 part 5.
+	-->
     <title>Forms challenge</title>
-    <link href="style.css" rel="stylesheet" />
-    <script defer src="index.js"></script>
+    <link href="../css/style.css" rel="stylesheet" />
+    
   </head>
   <body>
     We want your feedback!
