--- a/LABS/lab4/part5/forms-challenge/html/index.html
+++ b/LABS/lab4/part5/forms-challenge/html/index.html
@@ -12,18 +12,21 @@
     
   </head>
   <body>
-    We want your feedback!
+    <h1>We want your feedback!</h1>
 
-    We're very excited that you visited the little house in the woods,
+  <p>
+    We're very excited that you visited the <a href="#"> little house in the woods</a>,
     and we want to hear what you thought of it! Please fill in the below
     sections. You don't need to provide your name or contact details, but
-    if you do, we'll enter you into a prize draw where you'll have a chance
+    if you do, we'll enter you into a <a href="#">prize draw </a>where you'll have a chance
     to win prizes.
+  </p>
+  <img src="https://mdn.github.io/shared-assets/images/examples/learn/woodland-strip.jpg" alt="" />
 
     <!-- ===================== FACILITIES ===================== -->
     <form>
           <div class="form-section">
-    Facilities
+        <h2>Facilities</h2>
         <!-- Porridge -->
         <fieldset>
     <legend>Was the porridge</legend>
@@ -63,8 +66,8 @@
             <label for=Luxurious>Luxurious</label
             >
             <input type="checkbox" id="Hi tec" name="Hi tec" value="Hi tec" />
-            <label for=Hi-tec>  </label
-              >
+            <label for=Hi-tec>  Hi-tec</label
+            >
             <input type="checkbox" id="Pretty" name="Pretty" value="Pretty" />
             <label for=Pretty>Pretty</label
             >
@@ -76,7 +79,7 @@
 
           <div class="form-section">
 
-    About your hosts
+        <h2>About your hosts</h2>
             <!-- Favorite bear -->
 <div class="separator">
           <label for = "favorite">Who's your favourite bear?</label>
@@ -104,7 +107,7 @@
           <!-- ===================== FEEDBACK ===================== -->
         <div class="form-section">    
         
-          Any other feedback?
+        <h2>Any other feedback?</h2>
 
         <label for="comments">Give us your comments</label>
 
@@ -113,7 +116,7 @@
 
       <!-- ===================== CONTACT DETAILS ===================== -->
       <div class="form-section">
-    Your details
+        <h2>Your details</h2>
 
         <div class="separator">
           <label for="name">Name</label>
