--- a/LABS/index.html
+++ b/LABS/index.html
@@ -5,10 +5,11 @@
     <!--
 	Name: Innocent Amini
 	File: index.html
-	Date: 14 September 2025
+	Created: 14 September 2025
+	Last Updated: 26 November 2025
 	Desc: This home page contains links to main home page for INFT1206 Labs.
 -->
-	<title>Innocent's INFT1206 - Home page</title>
+	<title>Innocent's INFT1206 Labs- Home page</title>
     <style>
 	body {
 		font-family: Arial, sans-serif;
@@ -38,6 +39,6 @@ Please click on the Following links to Explorer the labs!<br>
 <p>Lab 1: <a href="https://inno-cent-3.github.io/LABS/lab1/index.html">Click here!👈🏾</a></p>
 <p>Lab 2: <a href="https://inno-cent-3.github.io/LABS/lab2/index.html">Click here!👈🏾</a></p>
 <p>Lab 3: <a href="https://inno-cent-3.github.io/LABS/lab3/index.html">Click here!👈🏾</a></p>
-
+<p>Lab 4: <a href="https://inno-cent-3.github.io/LABS/lab4/index.html">Click here!👈🏾</a></p>
 </body>
 </html>
