--- a/LABS/lab5/assessment-files/index.html
+++ b/LABS/lab5/assessment-files/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+  <!-- Name: Innocent Amini
+	Date: 2 December 2025
+	File: index.html
+	Desc: This is the HTML file for Accessibility troubleshooting assignment.
+	-->
     <title>Accessibility assessment</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
