--- a/LABS/lab5/assessment-files/index.html
+++ b/LABS/lab5/assessment-files/index.html
@@ -115,8 +115,17 @@
         <audio controls>
           <source src="media/bear.mp3" type="audio/mp3">
           <source src="media/bear.ogg" type="audio/ogg">
-          <p>It looks like your browser doesn't support HTML5 audio players.</p>
+          <p>It looks like your browser doesn't support HTML5 audio players.
+          <a href="media/bear.mp3">Download the audio file here.</a> instead.</p>
         </audio>
+        
+<!-- Transcript Section -->
+<div class="transcript">
+  <h3>Transcript</h3>
+  <p>
+    This isn't really an audio file about bears, but it is an audio file that you can transcribe.
+  </p>
+</div>
 
         <aside>
 
