--- a/LABS/lab5/assessment-files/index.html
+++ b/LABS/lab5/assessment-files/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
   <!-- Name: Innocent Amini
@@ -8,7 +8,7 @@
 	Desc: This is the HTML file for Accessibility troubleshooting assignment.
 	-->
     <title>Accessibility assessment</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
@@ -32,7 +32,7 @@
 
       <form class="search">
         <label for="q" class="sr-only">Search the site</label>
-        <input type="search" name="q" placeholder="Search query">
+        <input type="search" name="q" id="q" placeholder="Search query">
         <input type="submit" value="Go!">
       </form>
     </nav>
