--- a/LABS/index.html
+++ b/LABS/index.html
@@ -6,7 +6,7 @@
 	Name: Innocent Amini
 	File: index.html
 	Created: 14 September 2025
-	Last Updated: 26 November 2025
+	Last Updated: 4 December 2025
 	Desc: This home page contains links to main home page for INFT1206 Labs.
 -->
 	<title>Innocent's INFT1206 Labs- Home page</title>
@@ -40,5 +40,6 @@ Please click on the Following links to Explorer the labs!<br>
 <p>Lab 2: <a href="https://inno-cent-3.github.io/LABS/lab2/index.html">Click here!👈🏾</a></p>
 <p>Lab 3: <a href="https://inno-cent-3.github.io/LABS/lab3/index.html">Click here!👈🏾</a></p>
 <p>Lab 4: <a href="https://inno-cent-3.github.io/LABS/lab4/index.html">Click here!👈🏾</a></p>
+<p>Lab 5: <a href="https://inno-cent-3.github.io/LABS/lab5/assessment-files">Click here!👈🏾</a></p>
 </body>
 </html>
