--- a/LABS/lab5/assessment-files/index.html
+++ b/LABS/lab5/assessment-files/index.html
@@ -8,7 +8,7 @@
 	Desc: This is the HTML file for Accessibility troubleshooting assignment.
 	-->
     <title>Accessibility assessment</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300Sonsie+One" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Sonsie+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
