--- a/LABS/index.html
+++ b/LABS/index.html
@@ -13,7 +13,7 @@
     <style>
 	body {
 		font-family: Arial, sans-serif;
-		background-color: lightblue;
+		background-color: #D8EEEE;
 		margin: 20px;
 	}
 	title {
